--- a/tutorials/void-assay/index.html
+++ b/tutorials/void-assay/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Using Void Spot Assay (VSA) for Micturition Assessment in Mice
-attribution: Provided by Chad Vezina, University of Wisconsin-Madison.<br/><small>September 2018</small>
+attribution: Provided by Chad Vezina, University of Wisconsin-Madison.<br/><small>September 2018 (GUDMAP)</small>
 category: education
 tags: [best practices, prostate, voiding, void spot assay, voiding behavior, urinary dysfunction]
 redirect_from:
