--- a/rebuildingakidney/projects/single-nuclei-multiome/index.html
+++ b/rebuildingakidney/projects/single-nuclei-multiome/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk-sub
 tag:
 title: Single-nuclei multiome atlas for a mammalian model of kidney regeneration
 redirect_from: /projects/single-nuclei-multiome/
