--- a/resources/functional-assays/index.html
+++ b/resources/functional-assays/index.html
@@ -5,11 +5,11 @@ tag: funct-assays
 title: Functional Assays Handbook
 ---
 
-<p class="acknowledgement">Provided through the <a href="https://www.rebuildingakidney.org">(Re)Building a Kidney Consortium</a>.</p>
+<p class="acknowledgement">Provided through the <a href="/rebuildingakidney/">(Re)Building a Kidney Consortium</a>.</p>
 
 <p>The RBK Consortium has developed the foundation for a collection of functional assays (with a current focus on <strong>physiological assays</strong>) that are both:
 <ul>
-  <li>critical for achieving <a href="/about/#objectives">our consortium goals</a> - for glomerular function, tubular function and absorption, AND </li>
+  <li>critical for achieving <a href="/rebuildingakidney/about/#objectives">our consortium mission</a> - for glomerular function, tubular function and absorption, AND </li>
   <li>as transferable as possible for other labs in the consortium.</li>
 </ul>
 
