--- a/tutorials/void-assay/index.html
+++ b/tutorials/void-assay/index.html
@@ -9,10 +9,10 @@ tags: [best practices, prostate, voiding, void spot assay, voiding behavior, uri
 
 <div class="tutorial-gallery">
   <a href="#definition">
-    <img src="/assets/img/tutorials/filter-to-uv-diagram-thumb.png" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/filter-to-uv-diagram-thumb.png" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#best-practices">
-    <img src="/assets/img/tutorials/micturtion-protocol-video-thumb.png" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/micturtion-protocol-video-thumb.png" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
 </div>
 
